# platform.core.multimedia.libmm-imgp-gstcs

./: Makefile.am  Makefile.in  configure  configure.ac  project.config
debian/: changelog  compat  control  copyright  rules
gstcs/: Makefile.am  Makefile.in  mm_util_gstcs.c  mmutil-gstcs.pc.in
gstcs/include/: mm_util_gstcs.h  mm_util_gstcs_internal.h
packaging/: libmm-imgp-gstcs.spec
